--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
+  "name": "aluraplay-projeto-base",
+  "version": "1.0.0",
+  "description": "<p align=\"center\"> <img src=\"https://github.com/MonicaHillman/aluraplay-requisicoes/blob/main/img/logo.png\" alt=\"Logo da Alura\"> </p>",
+  "homepage": "https://github.com/MilyRibeiro/projeto-aluraplay#readme",
+  "bugs": {
+    "url": "https://github.com/MilyRibeiro/projeto-aluraplay/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MilyRibeiro/projeto-aluraplay.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "json-server --watch db.json"
+  },
   "dependencies": {
     "json-server": "^1.0.0-beta.3"
+  },
+  "devDependencies": {
+    "json-server": "^0.17.4"
   }
 }
