--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "json-server --watch db.json"
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "^0.17.4"
   },
   "devDependencies": {
     "json-server": "^0.17.4"
